@@ -4,8 +4,8 @@ import com.grack.nanojson.JsonArray;
 import com.grack.nanojson.JsonObject;
 import com.grack.nanojson.JsonParser;
 import com.grack.nanojson.JsonParserException;
-
 import org.schabi.newpipe.extractor.MediaFormat;
+import org.schabi.newpipe.extractor.MetaInfo;
 import org.schabi.newpipe.extractor.NewPipe;
 import org.schabi.newpipe.extractor.StreamingService;
 import org.schabi.newpipe.extractor.downloader.Downloader;
@@ -18,17 +18,12 @@ import org.schabi.newpipe.extractor.localization.DateWrapper;
 import org.schabi.newpipe.extractor.services.peertube.PeertubeParsingHelper;
 import org.schabi.newpipe.extractor.services.peertube.linkHandler.PeertubeSearchQueryHandlerFactory;
 import org.schabi.newpipe.extractor.services.peertube.linkHandler.PeertubeStreamLinkHandlerFactory;
-import org.schabi.newpipe.extractor.stream.AudioStream;
-import org.schabi.newpipe.extractor.stream.Description;
-import org.schabi.newpipe.extractor.stream.Stream;
-import org.schabi.newpipe.extractor.stream.StreamExtractor;
-import org.schabi.newpipe.extractor.stream.StreamInfoItemsCollector;
-import org.schabi.newpipe.extractor.stream.StreamType;
-import org.schabi.newpipe.extractor.stream.SubtitlesStream;
-import org.schabi.newpipe.extractor.stream.VideoStream;
+import org.schabi.newpipe.extractor.stream.*;
 import org.schabi.newpipe.extractor.utils.JsonUtils;
 import org.schabi.newpipe.extractor.utils.Utils;
 
+import javax.annotation.Nonnull;
+import javax.annotation.Nullable;
 import java.io.IOException;
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
@@ -37,8 +32,8 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
 
-import javax.annotation.Nonnull;
-import javax.annotation.Nullable;
+import static org.schabi.newpipe.extractor.utils.Utils.UTF_8;
+import static org.schabi.newpipe.extractor.utils.Utils.isNullOrEmpty;
 
 public class PeertubeStreamExtractor extends StreamExtractor {
     private final String baseUrl;
@@ -154,6 +149,11 @@ public class PeertubeStreamExtractor extends StreamExtractor {
         return JsonUtils.getString(json, "account.displayName");
     }
 
+    @Override
+    public boolean isUploaderVerified() throws ParsingException {
+        return false;
+    }
+
     @Nonnull
     @Override
     public String getUploaderAvatarUrl() {
@@ -199,7 +199,7 @@ public class PeertubeStreamExtractor extends StreamExtractor {
     @Nonnull
     @Override
     public String getHlsUrl() {
-        return "";
+        return json.getArray("streamingPlaylists").getObject(0).getString("playlistUrl");
     }
 
     @Override
@@ -211,12 +211,42 @@ public class PeertubeStreamExtractor extends StreamExtractor {
     public List<VideoStream> getVideoStreams() throws ExtractionException {
         assertPageFetched();
         final List<VideoStream> videoStreams = new ArrayList<>();
+        // mp4
         try {
-            final JsonArray streams = json.getArray("files");
+            videoStreams.addAll(getVideoStreamsFromArray(json.getArray("files")));
+        } catch (Exception ignored) { }
+        // HLS
+        try {
+            final JsonArray streamingPlaylists = json.getArray("streamingPlaylists");
+            for (final Object p : streamingPlaylists) {
+                if (!(p instanceof JsonObject)) continue;
+                final JsonObject playlist = (JsonObject) p;
+                videoStreams.addAll(getVideoStreamsFromArray(playlist.getArray("files")));
+            }
+        } catch (Exception e) {
+            throw new ParsingException("Could not get video streams", e);
+        }
+
+        if (getStreamType() == StreamType.LIVE_STREAM) {
+            final String url = getHlsUrl();
+            videoStreams.add(new VideoStream(url, MediaFormat.MPEG_4, "720p"));
+        }
+
+        return videoStreams;
+    }
+
+    private List<VideoStream> getVideoStreamsFromArray(final JsonArray streams) throws ParsingException {
+        try {
+            final List<VideoStream> videoStreams = new ArrayList<>();
             for (final Object s : streams) {
                 if (!(s instanceof JsonObject)) continue;
                 final JsonObject stream = (JsonObject) s;
-                final String url = JsonUtils.getString(stream, "fileUrl");
+                final String url;
+                if (stream.has("fileDownloadUrl")) {
+                    url = JsonUtils.getString(stream, "fileDownloadUrl");
+                } else {
+                    url = JsonUtils.getString(stream, "fileUrl");
+                }
                 final String torrentUrl = JsonUtils.getString(stream, "torrentUrl");
                 final String resolution = JsonUtils.getString(stream, "resolution.label");
                 final String extension = url.substring(url.lastIndexOf(".") + 1);
@@ -226,13 +256,12 @@ public class PeertubeStreamExtractor extends StreamExtractor {
                     videoStreams.add(videoStream);
                 }
             }
+            return videoStreams;
         } catch (Exception e) {
-            throw new ParsingException("Could not get video streams", e);
+            throw new ParsingException("Could not get video streams from array");
         }
 
-        return videoStreams;
     }
-
 
     @Override
     public List<VideoStream> getVideoOnlyStreams() {
@@ -259,18 +288,20 @@ public class PeertubeStreamExtractor extends StreamExtractor {
 
     @Override
     public StreamType getStreamType() {
-        return StreamType.VIDEO_STREAM;
+        return json.getBoolean("isLive") ? StreamType.LIVE_STREAM : StreamType.VIDEO_STREAM;
     }
 
     @Nullable
     @Override
-    public StreamInfoItemsCollector getRelatedStreams() throws IOException, ExtractionException {
+    public StreamInfoItemsCollector getRelatedItems() throws IOException, ExtractionException {
         final List<String> tags = getTags();
         final String apiUrl;
         if (tags.isEmpty()) {
-            apiUrl = getUploaderUrl() + "/videos?start=0&count=8";
+            apiUrl = baseUrl + "/api/v1/accounts/" + JsonUtils.getString(json, "account.name")
+                    + "@" + JsonUtils.getString(json, "account.host") +
+                    "/videos?start=0&count=8";
         } else {
-            apiUrl = getRelatedStreamsUrl(tags);
+            apiUrl = getRelatedItemsUrl(tags);
         }
 
         if (Utils.isBlank(apiUrl)) {
@@ -285,11 +316,7 @@ public class PeertubeStreamExtractor extends StreamExtractor {
     @Nonnull
     @Override
     public List<String> getTags() {
-        try {
-            return (List) JsonUtils.getArray(json, "tags");
-        } catch (Exception e) {
-            return Collections.emptyList();
-        }
+        return JsonUtils.getStringListFromJsonArray(json.getArray("tags"));
     }
 
     @Nonnull
@@ -302,13 +329,25 @@ public class PeertubeStreamExtractor extends StreamExtractor {
         }
     }
 
-    private String getRelatedStreamsUrl(final List<String> tags) throws UnsupportedEncodingException {
+    @Nonnull
+    @Override
+    public List<StreamSegment> getStreamSegments() {
+        return Collections.emptyList();
+    }
+
+    @Nonnull
+    @Override
+    public List<MetaInfo> getMetaInfo() {
+        return Collections.emptyList();
+    }
+
+    private String getRelatedItemsUrl(final List<String> tags) throws UnsupportedEncodingException {
         final String url = baseUrl + PeertubeSearchQueryHandlerFactory.SEARCH_ENDPOINT;
         final StringBuilder params = new StringBuilder();
         params.append("start=0&count=8&sort=-createdAt");
         for (final String tag : tags) {
             params.append("&tagsOneOf=");
-            params.append(URLEncoder.encode(tag, "UTF-8"));
+            params.append(URLEncoder.encode(tag, UTF_8));
         }
         return url + "?" + params.toString();
     }
@@ -355,7 +394,7 @@ public class PeertubeStreamExtractor extends StreamExtractor {
     @Override
     public void onFetchPage(final Downloader downloader) throws IOException, ExtractionException {
         final Response response = downloader.get(baseUrl + PeertubeStreamLinkHandlerFactory.VIDEO_API_ENDPOINT + getId());
-        if (response != null && response.responseBody() != null) {
+        if (response != null) {
             setInitialData(response.responseBody());
         } else {
             throw new ExtractionException("Unable to extract PeerTube channel data");
@@ -391,7 +430,7 @@ public class PeertubeStreamExtractor extends StreamExtractor {
                         final String languageCode = JsonUtils.getString(caption, "language.id");
                         final String ext = url.substring(url.lastIndexOf(".") + 1);
                         final MediaFormat fmt = MediaFormat.getFromSuffix(ext);
-                        if (fmt != null && languageCode != null)
+                        if (fmt != null && !isNullOrEmpty(languageCode))
                             subtitles.add(new SubtitlesStream(fmt, languageCode, url, false));
                     }
                 }
@@ -415,8 +454,19 @@ public class PeertubeStreamExtractor extends StreamExtractor {
 
     @Nonnull
     @Override
-    public String getPrivacy() throws ParsingException {
-        return JsonUtils.getString(json, "privacy.label");
+    public Privacy getPrivacy() {
+        switch (json.getObject("privacy").getInt("id")) {
+            case 1:
+                return Privacy.PUBLIC;
+            case 2:
+                return Privacy.UNLISTED;
+            case 3:
+                return Privacy.PRIVATE;
+            case 4:
+                return Privacy.INTERNAL;
+            default:
+                return Privacy.OTHER;
+        }
     }
 
     @Nonnull
